--- a/src/assets/css/_actor.scss
+++ b/src/assets/css/_actor.scss
@@ -16,6 +16,14 @@
 
     &__image {
         display: flex;
+        width: 300px;
+        height: 450px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
         @media screen and (max-width: 368px) {
             width: 100%;
