feat: Add pagination for actor list in movie details

--- a/src/assets/css/_actors.scss
+++ b/src/assets/css/_actors.scss
@@ -29,6 +29,12 @@
         }
     }
 
+    .pagination {
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
 }
 
 .actor-card {
