fix: add hover/disabled states for pagination arrows and reset button styles

--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -23,3 +23,13 @@ input {
     color: inherit;
     font-family: inherit;
 }
+
+button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: pointer;
+}
