--- a/src/assets/css/_pagination.scss
+++ b/src/assets/css/_pagination.scss
@@ -27,5 +27,14 @@
         padding: 8px 11px 8px 10px;
         background-color: colors.$color-background;
         border-radius: 6px;
+
+        &:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
+        &:not(:disabled):hover {
+            background-color: colors.$color-background-hover;
+        }
     }
 }
