--- a/src/assets/css/_movie-card.scss
+++ b/src/assets/css/_movie-card.scss
@@ -5,6 +5,12 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
+
+    &-container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
 .movie-card {
