--- a/src/assets/css/_filterbar.scss
+++ b/src/assets/css/_filterbar.scss
@@ -41,6 +41,8 @@
             align-items: center;   
             
             cursor: pointer;
+            width: 100%;
+            padding: 0;
         }
 
         &-content {
