--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -5,10 +5,12 @@
 }
 
 body {
-    background-color: #000;
-    color: #fff;
+    background-color: var(--background);
+    color: var(--text);
     font-family: "Inter", sans-serif;
     margin: 0;
+    transition: background-color var(--transition-duration) ease,
+                color var(--transition-duration) ease;
 }
 
 a {
