fix: update banner background gradient to use CSS variable for better theme integration

--- a/src/assets/css/_banner.scss
+++ b/src/assets/css/_banner.scss
@@ -4,7 +4,7 @@
 
 .banner {
     background:
-    linear-gradient(to top, #000, transparent),
+    linear-gradient(to top, var(--background), transparent),
         var(--banner-image) no-repeat center center/cover;
 
     height: 323px;
