--- a/src/assets/css/_movie-details.scss
+++ b/src/assets/css/_movie-details.scss
@@ -48,6 +48,7 @@ $responsive-breakpoint: 768px;
         &-types {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
             gap: 8px;
 
             margin-bottom: 1rem;
